--- a/wercker.yml
+++ b/wercker.yml
@@ -2,8 +2,8 @@ box: wercker/default
 
 build:
     steps:
-#        - shellcheck:
-#            files: run.sh
+        - shellcheck:
+            files: run.sh
         - script:
             name: prepare output
             code: rm -rf $WERCKER_ROOT/.git
